fix a few chrome extension issues and get POST request success/fail working

--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -10,8 +10,10 @@
     "default_popup": "html/popup.html"
   },
   "permissions": [
+    "storage",
     "tabs",
-    "webNavigation"
+    "webNavigation",
+    "http://*/"
   ],
   "background": {
     "scripts": ["js/jquery-3.2.1.min.js", "js/script.js"]
