add test logging

--- a/server/config/logging.conf
+++ b/server/config/logging.conf
@@ -1,5 +1,5 @@
 [loggers]
-keys=root,main
+keys=root,main,test
 
 [handlers]
 keys=consoleHandler
@@ -13,6 +13,11 @@ handlers=
 
 [logger_main]
 qualname=main
+level=INFO
+handlers=consoleHandler
+
+[logger_test]
+qualname=test
 level=INFO
 handlers=consoleHandler
 
