--- a/mew.conf
+++ b/mew.conf
@@ -1,5 +1,5 @@
 <VirtualHost *:80>
-		ServerName mew.ec2-54-212-225-107.us-west-2.compute.amazonaws.com
+		ServerName ec2-54-212-225-107.us-west-2.compute.amazonaws.com
 		WSGIScriptAlias / /var/www/mew/mew.wsgi
 		<Directory /var/www/mew/server/>
 			Require all granted
