add bar graph data test, move some things around with tokens/uids

--- a/server/config/logging.conf
+++ b/server/config/logging.conf
@@ -18,7 +18,7 @@ handlers=consoleHandler
 
 [logger_test]
 qualname=test
-level=INFO
+level=DEBUG
 handlers=consoleHandler
 
 [handler_consoleHandler]
