--- a/mew-le-ssl.conf
+++ b/mew-le-ssl.conf
@@ -1,4 +1,5 @@
-<VirtualHost *:80>
+<IfModule mod_ssl.c>
+<VirtualHost *:443>
 		ServerName mew.pelletier.io
 		WSGIScriptAlias / /var/www/mew/mew.wsgi
 		<Directory /var/www/mew/server/>
@@ -11,7 +12,8 @@
 		ErrorLog ${APACHE_LOG_DIR}/error.log
 		LogLevel warn
 		CustomLog ${APACHE_LOG_DIR}/access.log combined
-RewriteEngine on
-RewriteCond %{SERVER_NAME} =mew.pelletier.io
-RewriteRule ^ https://%{SERVER_NAME}%{REQUEST_URI} [END,NE,R=permanent]
+SSLCertificateFile /etc/letsencrypt/live/mew.pelletier.io/fullchain.pem
+SSLCertificateKeyFile /etc/letsencrypt/live/mew.pelletier.io/privkey.pem
+Include /etc/letsencrypt/options-ssl-apache.conf
 </VirtualHost>
+</IfModule>
