add logging to file

--- a/server/config/logging.conf
+++ b/server/config/logging.conf
@@ -2,10 +2,10 @@
 keys=root,main,test
 
 [handlers]
-keys=consoleHandler
+keys=consoleHandler,fileHandler
 
 [formatters]
-keys=basicFormatter
+keys=basic,basicWithDate
 
 [logger_root]
 level=DEBUG
@@ -14,7 +14,7 @@ handlers=
 [logger_main]
 qualname=main
 level=DEBUG
-handlers=consoleHandler
+handlers=consoleHandler,fileHandler
 
 [logger_test]
 qualname=test
@@ -24,9 +24,19 @@ handlers=consoleHandler
 [handler_consoleHandler]
 class=StreamHandler
 level=DEBUG
-formatter=basicFormatter
+formatter=basic
 args=(sys.stdout,)
 
-[formatter_basicFormatter]
+[handler_fileHandler]
+class=handlers.RotatingFileHandler
+level=DEBUG
+formatter=basicWithDate
+args=('.log/out', 'a')
+maxBytes=50000000
+
+[formatter_basic]
 format=[%(name)s - %(levelname)s] %(message)s
-# datefmt=%S
+
+[formatter_basicWithDate]
+format=%(asctime)s [%(name)s - %(levelname)s] %(message)s
+datefmt=%Y-%m-%d %H:%M:%S
