actually fix file logging

--- a/server/config/logging.conf
+++ b/server/config/logging.conf
@@ -2,10 +2,10 @@
 keys=root,main,test
 
 [handlers]
-keys=consoleHandler,fileHandler
+keys=consoleHandler
 
 [formatters]
-keys=basic,basicWithDate
+keys=basic
 
 [logger_root]
 level=DEBUG
@@ -14,7 +14,7 @@ handlers=
 [logger_main]
 qualname=main
 level=DEBUG
-handlers=consoleHandler,fileHandler
+handlers=consoleHandler
 
 [logger_test]
 qualname=test
@@ -27,16 +27,8 @@ level=DEBUG
 formatter=basic
 args=(sys.stdout,)
 
-[handler_fileHandler]
-class=handlers.RotatingFileHandler
-level=DEBUG
-formatter=basicWithDate
-args=('.log/out', 'a')
-maxBytes=50000000
-
 [formatter_basic]
 format=[%(name)s - %(levelname)s] %(message)s
 
-[formatter_basicWithDate]
-format=%(asctime)s [%(name)s - %(levelname)s] %(message)s
-datefmt=%Y-%m-%d %H:%M:%S
+# Note - filehandler is found in log.py, along with date formatting.
+# It depends on MEW_PATH so it can't be done statically here.
