changing domain name to seeprogress

--- a/mew.conf
+++ b/mew.conf
@@ -1,5 +1,5 @@
 <VirtualHost *:80>
-		ServerName mew.pelletier.io
+		ServerName seeprogress.io
 		WSGIScriptAlias / /var/www/mew/mew.wsgi
 		<Directory /var/www/mew/server/>
 			Require all granted
@@ -12,6 +12,6 @@
 		LogLevel warn
 		CustomLog ${APACHE_LOG_DIR}/access.log combined
 RewriteEngine on
-RewriteCond %{SERVER_NAME} =mew.pelletier.io
+RewriteCond %{SERVER_NAME} =seeprogress.io
 RewriteRule ^ https://%{SERVER_NAME}%{REQUEST_URI} [END,NE,R=permanent]
 </VirtualHost>
