--- a/mew-le-ssl.conf
+++ b/mew-le-ssl.conf
@@ -1,6 +1,6 @@
 <IfModule mod_ssl.c>
 <VirtualHost *:443>
-		ServerName mew.pelletier.io
+		ServerName seeprogress.io
 		WSGIScriptAlias / /var/www/mew/mew.wsgi
 		<Directory /var/www/mew/server/>
 			Require all granted
@@ -12,8 +12,8 @@
 		ErrorLog ${APACHE_LOG_DIR}/error.log
 		LogLevel warn
 		CustomLog ${APACHE_LOG_DIR}/access.log combined
-SSLCertificateFile /etc/letsencrypt/live/mew.pelletier.io/fullchain.pem
-SSLCertificateKeyFile /etc/letsencrypt/live/mew.pelletier.io/privkey.pem
+SSLCertificateFile /etc/letsencrypt/live/seeprogress.io/fullchain.pem
+SSLCertificateKeyFile /etc/letsencrypt/live/seeprogress.io/privkey.pem
 Include /etc/letsencrypt/options-ssl-apache.conf
 </VirtualHost>
 </IfModule>
