--- a/mew-le-ssl.conf
+++ b/mew-le-ssl.conf
@@ -1,19 +1,27 @@
 <IfModule mod_ssl.c>
 <VirtualHost *:443>
-		ServerName seeprogress.io
-		WSGIScriptAlias / /var/www/mew/mew.wsgi
-		<Directory /var/www/mew/server/>
-			Require all granted
-		</Directory>
-		Alias /static /var/www/mew/server/static
-		<Directory /var/www/mew/server/static/>
-			Require all granted
-		</Directory>
-		ErrorLog ${APACHE_LOG_DIR}/error.log
-		LogLevel warn
-		CustomLog ${APACHE_LOG_DIR}/access.log combined
-SSLCertificateFile /etc/letsencrypt/live/seeprogress.io/fullchain.pem
-SSLCertificateKeyFile /etc/letsencrypt/live/seeprogress.io/privkey.pem
-Include /etc/letsencrypt/options-ssl-apache.conf
+	ServerName seeprogress.io
+	WSGIDaemonProcess mew user=mewu group=mewg threads=5
+	WSGIScriptAlias / /var/www/mew/mew.wsgi
+	<Directory /var/www/mew>
+		WSGIProcessGroup mew
+		WSGIApplicationGroup %{GLOBAL}
+		Order deny,allow
+		Allow from all
+	</Directory>
+	#<Directory /var/www/mew/server/>
+	#	Require all granted
+	#</Directory>
+	Alias /static /var/www/mew/server/static
+	#<Directory /var/www/mew/server/static/>
+	#	Require all granted
+	#</Directory>
+	ErrorLog ${APACHE_LOG_DIR}/error.log
+	LogLevel warn
+	CustomLog ${APACHE_LOG_DIR}/access.log combined
+
+	SSLCertificateFile /etc/letsencrypt/live/seeprogress.io/fullchain.pem
+	SSLCertificateKeyFile /etc/letsencrypt/live/seeprogress.io/privkey.pem
+	Include /etc/letsencrypt/options-ssl-apache.conf
 </VirtualHost>
 </IfModule>
