--- a/mew.conf
+++ b/mew.conf
@@ -4,3 +4,6 @@
 RewriteEngine on
 RewriteRule .* https://seeprogress.io%{REQUEST_URI} [R=301,L]
 </VirtualHost>
+<VirtualHost *:80>
+		ServerName tasks.pelletier.io
+</VirtualHost>
