--- a/mew-le-ssl.conf
+++ b/mew-le-ssl.conf
@@ -14,8 +14,14 @@
 	LogLevel warn
 	CustomLog ${APACHE_LOG_DIR}/access.log combined
 
-	SSLCertificateFile /etc/letsencrypt/live/seeprogress.io/fullchain.pem
-	SSLCertificateKeyFile /etc/letsencrypt/live/seeprogress.io/privkey.pem
 	Include /etc/letsencrypt/options-ssl-apache.conf
+	ServerAlias tasks.pelletier.io
+	SSLCertificateFile /etc/letsencrypt/live/seeprogress.io/fullchain.pem
+SSLCertificateKeyFile /etc/letsencrypt/live/seeprogress.io/privkey.pem
+</VirtualHost>
+</IfModule>
+<IfModule mod_ssl.c>
+<VirtualHost *:80>
+		ServerName tasks.pelletier.io
 </VirtualHost>
 </IfModule>
