--- a/mew.conf
+++ b/mew.conf
@@ -6,4 +6,8 @@ RewriteRule .* https://seeprogress.io%{REQUEST_URI} [R=301,L]
 </VirtualHost>
 <VirtualHost *:80>
 		ServerName tasks.pelletier.io
+RewriteEngine on
+RewriteCond %{SERVER_NAME} =tasks.pelletier.io [OR]
+RewriteCond %{SERVER_NAME} =seeprogress.io
+RewriteRule ^ https://%{SERVER_NAME}%{REQUEST_URI} [END,NE,R=permanent]
 </VirtualHost>
