removing seeprogress domain

--- a/mew-le-ssl.conf
+++ b/mew-le-ssl.conf
@@ -1,7 +1,6 @@
 <IfModule mod_ssl.c>
 <VirtualHost *:443>
-	ServerName seeprogress.io
-	ServerAlias tasks.pelletier.io
+	ServerName tasks.pelletier.io
 	WSGIDaemonProcess mew user=mewu group=mewg threads=5
 	WSGIScriptAlias / /var/www/mew/mew.wsgi
 	<Directory /var/www/mew>
